[project]
name = "source"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "alembic>=1.16.4",
    "asyncpg>=0.30.0",
    "fastapi>=0.116.1",
    "jwt>=1.4.0",
    "psycopg2-binary>=2.9.10",
    "pydantic[email]>=2.11.7",
    "pydantic-settings>=2.10.1",
    "requests>=2.32.4",
    "sqlalchemy>=2.0.42",
    "python-multipart>=0.0.20",
    "bcrypt>=5.0.0",
    "uvicorn>=0.37.0",
    "pyjwt>=2.10.1",
    "slowapi>=0.1.9",
]
